test: add pool registration tests
